--- a/.github/workflows/deploy_hexo_blog.yml
+++ b/.github/workflows/deploy_hexo_blog.yml
@@ -34,6 +34,6 @@ jobs:
       run: |
         git config --global user.name "codcer"
         git config --global user.email "codcer@gmail.com"
-        pnpm install
-        pnpm build
-        pnpm deploy
+        npm install
+        npm build
+        npm deploy
