--- a/.github/workflows/deploy_hexo_blog.yml
+++ b/.github/workflows/deploy_hexo_blog.yml
@@ -35,5 +35,5 @@ jobs:
         git config --global user.name "codcer"
         git config --global user.email "codcer@gmail.com"
         npm install
-        npm build
-        npm deploy
+        npm run build
+        npm run deploy
