--- a/themes/cactus-dark/_config.yml
+++ b/themes/cactus-dark/_config.yml
@@ -134,9 +134,24 @@ open_graph:
 ##############################################################################
 
 # Fill in your Disqus Comments Shortname to enable Disqus comments.
+disqus_shortname: # Disqus Comments Shortname
+
 disqus:
-  enabled: true
+  enabled: false
   shortname: cactus-1
+
+# Valine comment system. https://valine.js.org
+valine:
+  enable: true # if you want use valine, please set this value to true
+  appId:  # your leancloud appId
+  appKey:  # your leancloud appKey
+  notify: false # Mail notify
+  verify: false # Verify code
+  avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
+  placeholder: 说点什么 # Comment Box placeholder
+  guest_info: nick,mail,link # Comment header info
+  pageSize: 10 # comment list page size
+
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
 google_analytics:
