--- a/themes/cactus-dark/_config.yml
+++ b/themes/cactus-dark/_config.yml
@@ -143,8 +143,8 @@ disqus:
 # Valine comment system. https://valine.js.org
 valine:
   enable: true # if you want use valine, please set this value to true
-  appId:  # your leancloud appId
-  appKey:  # your leancloud appKey
+  appId:  nRach5vXbSulMeiRHgqCbUCT-gzGzoHsz # your leancloud appId
+  appKey: CK2vLdlylRq40EiH2lu4lU2H # your leancloud appKey
   notify: false # Mail notify
   verify: false # Verify code
   avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
