--- a/themes/cactus-dark/_config.yml
+++ b/themes/cactus-dark/_config.yml
@@ -143,8 +143,8 @@ disqus:
 # Valine comment system. https://valine.js.org
 valine:
   enable: true # if you want use valine, please set this value to true
-  appId:  $VALINE_APPID # your leancloud appId
-  appKey: $VALINE_APPKEY # your leancloud appKey
+  appId:  $secrets.VALINE_APPID # your leancloud appId
+  appKey: $secrets.VALINE_APPKEY # your leancloud appKey
   notify: false # Mail notify
   verify: false # Verify code
   avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
